; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb_device_udd.c_udd_enable.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb_device_udd.c_udd_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_config = type { i32 }

@UDD_CLOCK_GEN = common dso_local global i32 0, align 4
@usb_device = common dso_local global i32 0, align 4
@USB = common dso_local global i32 0, align 4
@UDD_STATE_SUSPEND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @udd_enable() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.usb_config, align 4
  %3 = call i32 (...) @__get_PRIMASK()
  store i32 %3, i32* %1, align 4
  %4 = call i32 (...) @__disable_irq()
  %5 = call i32 (...) @__DMB()
  %6 = call i32 @usb_get_config_defaults(%struct.usb_config* %2)
  %7 = load i32, i32* @UDD_CLOCK_GEN, align 4
  %8 = getelementptr inbounds %struct.usb_config, %struct.usb_config* %2, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @USB, align 4
  %10 = call i32 @usb_init(i32* @usb_device, i32 %9, %struct.usb_config* %2)
  %11 = call i32 @usb_enable(i32* @usb_device)
  %12 = call i32 (...) @udd_wait_clock_ready()
  %13 = load i32, i32* @UDD_STATE_SUSPEND, align 4
  %14 = call i32 @udd_sleep_mode(i32 %13)
  %15 = call i32 (...) @udd_attach()
  %16 = call i32 (...) @__DMB()
  %17 = load i32, i32* %1, align 4
  %18 = call i32 @__set_PRIMASK(i32 %17)
  ret void
}

declare dso_local i32 @__get_PRIMASK(...) #1

declare dso_local i32 @__disable_irq(...) #1

declare dso_local i32 @__DMB(...) #1

declare dso_local i32 @usb_get_config_defaults(%struct.usb_config*) #1

declare dso_local i32 @usb_init(i32*, i32, %struct.usb_config*) #1

declare dso_local i32 @usb_enable(i32*) #1

declare dso_local i32 @udd_wait_clock_ready(...) #1

declare dso_local i32 @udd_sleep_mode(i32) #1

declare dso_local i32 @udd_attach(...) #1

declare dso_local i32 @__set_PRIMASK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
